--- a/app/src/main/res/layout/activity_broadcaster.xml
+++ b/app/src/main/res/layout/activity_broadcaster.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="io.irisplatform.examplebroadcaster.BroadcasterActivity">
+    tools:context="com.bambuser.examplebroadcaster.BroadcasterActivity">
 
     <com.bambuser.broadcaster.SurfaceViewWithAutoAR android:id="@+id/PreviewSurfaceView"
         android:layout_height="wrap_content"
